# sysadmin_mcp

./: README.md  debug.py  install.bat  install.sh  mcp.json  pyproject.toml  requirements.txt  server.py
tools/: archive.py  clipboard.py  filesystem.py  input.py  memory.py  network.py  process.py  registry.py  screen.py  selfchat.py  shell.py  sysinfo.py
