[project]
name = "sysadmin-mcp"
version = "1.3.0"
description = "Full system access MCP server for LM Studio"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "pygetwindow>=0.0.9",
    "psutil>=5.9.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
sysadmin-mcp = "server:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
